--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <body>
 
 <div id="chat-container">
-    <div id="chat-header">Claude Chatbot</div>
+    <div id="chat-header">OpenAI Chatbot</div>
     <div id="messages"></div>
     <div id="typing">Zevpoint Advisor is typing...</div>
 
