Update chatbot to use Azure Function backend

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
    CONFIG
 ---------------------------------- */
 
-const apiUrl = "https://YOUR_AZURE_FUNCTION_URL/api/httptrigger";
+const apiUrl = "http://localhost:5000/api/HttpTrigger";
 
 /* ----------------------------------
    USER & SESSION HANDLING
@@ -219,7 +219,11 @@ async function sendMessage() {
     try {
         const response = await fetch(apiUrl, {
             method: "POST",
-            headers: { "Content-Type": "application/json" },
+            headers: { 
+                "Content-Type": "application/json",
+                "Access-Control-Allow-Origin": "*"
+            },
+            mode: "cors",
             body: JSON.stringify({
                 message: userMessage,
                 user_id: userId,
